# vpn-hub

./: .dockerignore  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  .release-please-manifest.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  release-please-config.json  zensical.toml
backend/: CHANGELOG.md  alembic.ini  entrypoint.sh  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 20260703_0011-ae99804150d1_initial_schema.py  20260704_0012-a1b2c3d4e5f6_add_server_protocol_error_code.py  20260705_0013-b2c3d4e5f6a7_add_audit_events.py  20260705_0014-c3d4e5f6a7b8_add_traffic_samples.py  20260705_0015-d4e5f6a7b8c9_add_metric_samples.py  20260705_0016-e5f6a7b8c9d0_add_server_protocol_columns.py  20260705_0016-e5f6a7b8c9d0_add_server_protocol_image_version.py  20260705_0017-f6a7b8c9d0e1_add_chain_links.py  20260706_0018-a7b8c9d0e1f2_add_server_metrics.py  20260706_0019-b8c9d0e1f2a3_add_online_by_proto.py  20260706_0020-c9d0e1f2a3b4_add_traffic_samples_online.py  20260706_0021-d0e1f2a3b4c5_add_traffic_samples_ext_name.py  20260706_0022-e1f2a3b4c5d6_add_server_protocol_max_clients.py  20260706_0130-f2a3b4c5d6e7_add_device_limits.py  20260706_0200-a3b4c5d6e7f8_add_byte_limits.py  20260707_0023-c5d6e7f8a9b0_add_server_provider_metadata.py  20260707_0100-b4c5d6e7f8a9_add_server_prices.py  20260709_0100-d6e7f8a9b0c1_add_traffic_peer_state.py  20260709_0200-e8f9a0b1c2d3_add_server_protocol_traffic_health.py  20260709_0300-f9a0b1c2d3e4_add_traffic_rollups.py  20260709_0400-a0b1c2d3e4f5_add_server_metrics_hourly.py  20260711_0100-b1c2d3e4f5a6_optimize_metric_storage.py
backend/src/vpnhub/: __init__.py
backend/src/vpnhub/api/: config.py  deps.py  entrypoint.py  static.py
backend/src/vpnhub/common/: catalog.py  net.py  retry.py  serializers.py
backend/src/vpnhub/core/: audit_types.py  errors.py  i18n.py
backend/src/vpnhub/data/: providers.default.yaml
backend/src/vpnhub/infra/: changelog.py  events.py  fx.py  hostmetrics.py  keyring.py  metrics.py  onlinestats.py  probe.py  provider_plans.py  providers_store.py  ratelimit.py  security.py  selfupdate.py  sysprobe.py  trafficstats.py  uow.py  updates.py
backend/src/vpnhub/services/: access.py  admin.py  audit.py  auth.py  backups.py  bootstrap.py  configs.py  devices.py  finance.py  groups.py  hostmetrics.py  limits.py  me.py  metrics.py  metrics_retention.py  multihop.py  pools.py  provisioning.py  server_access.py  servers.py  sync.py  sync_logic.py  traffic.py  traffic_rollup.py
backend/tests/: conftest.py
backend/tests/factories/: orm.py
backend/tests/integration/: conftest.py  test_migrations_gauntlet.py
backend/tests/integration/infra/: test_keyring.py
backend/tests/integration/services/: test_access_me.py  test_admin.py  test_audit.py  test_auth.py  test_awg_params_service.py  test_bootstrap.py  test_byte_limit_reconcile.py  test_configs.py  test_devices.py  test_events_publish.py  test_finance.py  test_groups.py  test_hostmetrics.py  test_limits.py  test_me_usage.py  test_metrics.py  test_metrics_retention.py  test_multihop_service.py  test_pools.py  test_provisioning.py  test_reality_service.py  test_server_access.py  test_server_migration.py  test_servers.py  test_sync.py  test_traffic.py  test_traffic_rollup.py
backend/tests/unit/api/: test_config.py  test_deps.py  test_health.py  test_owner_pos_int.py  test_realtime_stream.py  test_static.py
backend/tests/unit/common/: test_catalog.py  test_net.py  test_retry.py  test_serializers.py
backend/tests/unit/core/: test_errors.py  test_i18n.py
backend/tests/unit/infra/: test_backfills.py  test_di.py  test_events.py  test_fx.py  test_hostmetrics.py  test_metrics.py  test_onlinestats.py  test_probe.py  test_provider_plans.py  test_providers_store.py  test_ratelimit.py  test_script_runner_guard.py  test_security.py  test_selfupdate.py  test_startup_key.py  test_sysprobe.py  test_trafficstats.py  (+1 more)
(+237 files in other folders)
