[project]
name = "vpn-hub-backend"
version = "0.7.0"
description = "VPN Hub — self-hosted VPN aggregator (backend)"
license = { text = "Apache-2.0" }
authors = [{ name = "Alexey Shalaev", email = "shalaevad.alexey@gmail.com" }]
keywords = ["vpn", "wireguard", "amneziawg", "openvpn", "outline", "xray", "self-hosted", "fastapi"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: FastAPI",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet",
  "Topic :: System :: Networking",
]
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "sqlalchemy[asyncio]>=2.0",
  "asyncpg>=0.30",
  "alembic>=1.14",
  "dishka>=1.4",
  "pydantic>=2.10",
  "pydantic-settings>=2.7",
  "argon2-cffi>=23",
  "cryptography>=44",
  "structlog>=24",
  "apscheduler>=3.11",
  "python-multipart>=0.0.20",
  "prometheus-client>=0.21",
  "phonenumbers>=8.13",
  "pyyaml>=6",
  "sqlalchemy-foundation-kit>=0.1.0",
  "alembic-gauntlet>=0.2.1",
  "asyncssh>=2.24.0",
]

[project.urls]
Homepage = "https://github.com/AlexeyShalaev/vpn-hub"
Documentation = "https://AlexeyShalaev.github.io/vpn-hub/"
Repository = "https://github.com/AlexeyShalaev/vpn-hub"
Issues = "https://github.com/AlexeyShalaev/vpn-hub/issues"
Changelog = "https://github.com/AlexeyShalaev/vpn-hub/blob/master/backend/CHANGELOG.md"

[dependency-groups]
dev = [
  "ruff>=0.15.1",
  "mypy>=1.19.1",
  "pre-commit>=4.5.1",
  "pytest>=8",
  "pytest-asyncio>=0.24",
  "pytest-cov>=7",
  "pytest-lazy-fixtures>=1.1",
  "aiosqlite>=0.20",
]
# Сборка сайта документации (zensical) — из корня: make docs-serve / docs-build.
docs = [
  "zensical",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vpnhub"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = ["--strict-markers"]
markers = [
  "unit: чистая логика без внешней инфраструктуры",
  "integration: сервисы поверх БД (in-memory SQLite через UoW)",
]

[tool.coverage.run]
source = ["vpnhub"]
omit = ["tests/*", "*/test_*.py"]

[tool.ruff]
line-length = 120
src = ["src", "tests"]
# Без явного target-version ruff 0.15.x ломает `except (A, B):` в `except A, B:`
# (невалидный Python 3) при `make fmt`. py314 у ruff 0.15.20 этот баг не чинит, py313 — чинит.
target-version = "py313"

[tool.ruff.lint]
# Строгий набор из python-library-template.
select = ["F", "E", "W", "I", "B", "N", "S", "C4", "DTZ", "SIM", "TRY", "PERF", "RUF", "UP", "ANN", "T20", "PTH", "PLC", "PLE", "PLW"]
ignore = [
  "TRY003", "ANN401", "RUF012", "ANN204", "N802", "PERF401", "SIM105",
  "S101", "S104", "S105", "S106", "S607",
  "ANN", "DTZ",
  # Доменные исключения VPN Hub (унаследованы из vpn-hub-gl):
  "B008",                       # штатный паттерн FastAPI (Depends/Body в дефолтах)
  "RUF001", "RUF002", "RUF003", # кириллица в строках/комментариях/докстрингах — намеренная
]

[tool.ruff.lint.per-file-ignores]
# Тесты: фикстуры/фабрики используют захардкоженные креды и psewdo-random; os.path приемлем.
"tests/**" = ["S101", "S105", "S106", "S107", "S311", "PTH", "PLC0415"]
# core/errors.py: доменные ошибки намеренно названы по HTTP-семантике (NotFound/Forbidden/…).
"src/vpnhub/core/errors.py" = ["N818"]

[tool.mypy]
python_version = "3.14"
files = ["src/vpnhub"]
mypy_path = ["src"]
check_untyped_defs = true
disallow_untyped_defs = true
implicit_reexport = false
ignore_missing_imports = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unreachable = true
